--- a/clientv2/src/pages/filtered/filtered.styles.scss
+++ b/clientv2/src/pages/filtered/filtered.styles.scss
@@ -52,11 +52,13 @@
     }
   }
   &_title {
-    color: var(--neutral-200);
-    text-align: center;
-    letter-spacing: 1px;
+    color: var(--neutral-50);
+    letter-spacing: 0.8px;
     text-transform: capitalize;
-    margin: 1rem auto;
+    padding: 1rem;
+    width: 100%;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+    text-align: center;
     span {
       font-style: italic;
     }
